# djangochannels

./: .gitignore  README.md  pyproject.toml
chat/: tests.py  urls.py  views.py
chat/templates/chat/: index.html
mysite/: asgi.py  settings.py  urls.py
users/: models.py  urls.py  views.py
users/templates/: index.html
