[tool.poetry]
name = "djangochannels"
version = "0.1.0"
description = ""
authors = ["Kano Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
flake8 = "^3.8.4"
channels = "^3.0.3"
channels-redis = "^3.2.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
